Добавила UserBackground, аватар пользователя, поле с именем пользователя.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@
         <div class="tmpMod">Логин</div>
     </div>
     <div id="moduleUser" class="wSmall hMedium">
-        <div class="tmpMod">Профиль</div>
+        <div class="UserPicture"> 
+	        <img src="assets/images/UserBackground.png"/>
+	        <div class="Avatar">
+	        	<img src="assets/images/profileAvatar.png"/>
+	        </div>
+	         	<div class="UserName">
+	         		<div class="Name">Shawn Mitchell</div>
+		         	
+	         	</div>
+	    </div>
     </div>
     <div id="moduleMusicPlayer" class="wSmall hMedium">
         <div class="tmpMod">Музыкальный Плеер</div>
