Добавил подстройку размера шрифта к размерам блока

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 <body>
 <div id="modules">
     <div id="moduleWeather" class="wSmall hSmall">
-        <div class="weatherCurrent">
+        <div class="weatherCurrent" data-font-adjust-width="4%">
             <div class="weatherCurrentIcon" style="background-image: url('assets/images/weatherCloudSun.png')"></div>
-            <div class="weatherCurrentTemperature">18&deg;C</div>
+            <div class="weatherCurrentTemperature" data-font-adjust-height="90%">18&deg;C
+            </div>
             <div class="weatherCurrentPlace">Simferopol</div>
         </div>
         <div class="weatherDay">
