Играюсь с круговой диаграммой

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
     <div id="moduleVideoPlayer" class="wSmall hSmall">
         <div class="tmpMod">Видео Плеер</div>
     </div>
+    <div id="moduleCircleLoading" class="wSmall hSmall">
+        <div class="circleLoading"></div>
+    </div>
 </div>
 </body>
 </html>
