--- a/index.html
+++ b/index.html
@@ -83,7 +83,27 @@
 	    </div>
     </div>
     <div id="moduleMusicPlayer" class="wSmall hMedium">
-        <div class="tmpMod">Музыкальный Плеер</div>
+        <div class="moduleMPlayerHeadRedButtom"></div>
+				<div class="moduleMPlayerHeadRedButtomSmallIcon">
+					<img src="assets/images/MPlayerPlayIcon.png" /></div>
+		<div class="moduleMPlayerHead">
+			<div class="moduleMPlayerHeadSongName">Dog Eat Dog - No Fronts</div>
+			<div class="moduleMPlayerHeadSongAuthor">All Boro Kings</div>
+			<div class="moduleMPlayerHeadLineRed"></div>
+			<div class="moduleMPlayerHeadLineWhite"></div></div>
+		<div class="moduleMPlayerList">
+		<div class="moduleMPlayerListTrackPosition">
+			<div class="moduleMPlayerListTrackPosition1">01: If These Are The Good Times</div>	
+			<div class="moduleMPlayerListTrackPosition2">02: Think</div>
+			<div class="moduleMPlayerListTrackPosition3">03: No Fronts</div>
+			<div class="moduleMPlayerListTrackPosition4">04: Pull My Finger</div>
+			<div class="moduleMPlayerListTrackPosition5">05: Who's The King?</div>
+			<div class="moduleMPlayerListTrackPosition6">06: Strip Song</div>
+			<div class="moduleMPlayerListTrackPosition7">07: Queen</div>
+			<div class="moduleMPlayerListTrackPosition8">08: In The Doghouse</div>
+			<div class="moduleMPlayerListTrackPosition9">09: Funnel King</div>
+			<div class="moduleMPlayerListTrackPosition10">10: What Comes Around</div>
+			</div>
     </div>
     <div id="moduleCalendar" class="wSmall hSmall">
         <div class="tmpMod">Календарь</div>
