DIV на 106 добавил

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 			<div class="moduleMPlayerListTrackPosition9">09: Funnel King</div>
 			<div class="moduleMPlayerListTrackPosition10">10: What Comes Around</div>
 			</div>
+		</div>
     </div>
     <div id="moduleCalendar" class="wSmall hSmall">
         <div class="tmpMod">Календарь</div>
