--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
 			<div class="moduleMPlayerHeadLineWhite"></div></div>
 		<div class="moduleMPlayerList">
 		<div class="moduleMPlayerListTrackPosition">
-			<div class="moduleMPlayerListTrackPosition1">01: If These Are The Good Times</div>	
-			<div class="moduleMPlayerListTrackPosition2">02: Think</div>
-			<div class="moduleMPlayerListTrackPosition3">03: No Fronts</div>
-			<div class="moduleMPlayerListTrackPosition4">04: Pull My Finger</div>
-			<div class="moduleMPlayerListTrackPosition5">05: Who's The King?</div>
-			<div class="moduleMPlayerListTrackPosition6">06: Strip Song</div>
-			<div class="moduleMPlayerListTrackPosition7">07: Queen</div>
-			<div class="moduleMPlayerListTrackPosition8">08: In The Doghouse</div>
-			<div class="moduleMPlayerListTrackPosition9">09: Funnel King</div>
-			<div class="moduleMPlayerListTrackPosition10">10: What Comes Around</div>
+			<div class="moduleMPlayerListTrackPosition1"data-font-adjust-height="40%">01: If These Are The Good Times</div>	
+			<div class="moduleMPlayerListTrackPosition2"data-font-adjust-height="40%">02: Think</div>
+			<div class="moduleMPlayerListTrackPosition3"data-font-adjust-height="40%">03: No Fronts</div>
+			<div class="moduleMPlayerListTrackPosition4"data-font-adjust-height="40%">04: Pull My Finger</div>
+			<div class="moduleMPlayerListTrackPosition5"data-font-adjust-height="40%">05: Who's The King?</div>
+			<div class="moduleMPlayerListTrackPosition6"data-font-adjust-height="40%">06: Strip Song</div>
+			<div class="moduleMPlayerListTrackPosition7"data-font-adjust-height="40%">07: Queen</div>
+			<div class="moduleMPlayerListTrackPosition8"data-font-adjust-height="40%">08: In The Doghouse</div>
+			<div class="moduleMPlayerListTrackPosition9"data-font-adjust-height="40%">09: Funnel King</div>
+			<div class="moduleMPlayerListTrackPosition10"data-font-adjust-height="40%">10: What Comes Around</div>
 			</div>
 		</div>
     </div>
