Переделал по коментариям

--- a/index.html
+++ b/index.html
@@ -83,27 +83,28 @@
 	    </div>
     </div>
     <div id="moduleMusicPlayer" class="wSmall hMedium">
-        <div class="moduleMPlayerHeadRedButtom"></div>
-				<div class="moduleMPlayerHeadRedButtomSmallIcon">
-					<img src="assets/images/MPlayerPlayIcon.png" /></div>
+        <div class="moduleMPlayerHeadButtom"></div>
+				<div class="moduleMPlayerHeadButtomSmallIcon">
+					<img src="assets/images/MPlayerPlayIcon.png"/>
+				</div>
 		<div class="moduleMPlayerHead">
 			<div class="moduleMPlayerHeadSongName">Dog Eat Dog - No Fronts</div>
 			<div class="moduleMPlayerHeadSongAuthor">All Boro Kings</div>
-			<div class="moduleMPlayerHeadLineRed"></div>
-			<div class="moduleMPlayerHeadLineWhite"></div></div>
-		<div class="moduleMPlayerList">
-		<div class="moduleMPlayerListTrackPosition">
-			<div class="moduleMPlayerListTrackPosition1"data-font-adjust-height="40%">01: If These Are The Good Times</div>	
-			<div class="moduleMPlayerListTrackPosition2"data-font-adjust-height="40%">02: Think</div>
-			<div class="moduleMPlayerListTrackPosition3"data-font-adjust-height="40%">03: No Fronts</div>
-			<div class="moduleMPlayerListTrackPosition4"data-font-adjust-height="40%">04: Pull My Finger</div>
-			<div class="moduleMPlayerListTrackPosition5"data-font-adjust-height="40%">05: Who's The King?</div>
-			<div class="moduleMPlayerListTrackPosition6"data-font-adjust-height="40%">06: Strip Song</div>
-			<div class="moduleMPlayerListTrackPosition7"data-font-adjust-height="40%">07: Queen</div>
-			<div class="moduleMPlayerListTrackPosition8"data-font-adjust-height="40%">08: In The Doghouse</div>
-			<div class="moduleMPlayerListTrackPosition9"data-font-adjust-height="40%">09: Funnel King</div>
-			<div class="moduleMPlayerListTrackPosition10"data-font-adjust-height="40%">10: What Comes Around</div>
+			<div class="moduleMPlayerHeadIndicatorLine">
+				<div class="Indicator"></div>
 			</div>
+ 		</div>
+		<div class="moduleMPlayerList">
+				<div data-font-adjust-height="40%">01: If These Are The Good Times</div>	
+				<div  data-font-adjust-height="40%">02: Think</div>
+				<div class="thistrack"data-font-adjust-height="40%">03: No Fronts</div>
+				<div data-font-adjust-height="40%">04: Pull My Finger</div>
+				<div data-font-adjust-height="40%">05: Who's The King?</div>
+				<div data-font-adjust-height="40%">06: Strip Song</div>
+				<div data-font-adjust-height="40%">07: Queen</div>
+				<div data-font-adjust-height="40%">08: In The Doghouse</div>
+				<div data-font-adjust-height="40%">09: Funnel King</div>
+				<div data-font-adjust-height="40%">10: What Comes Around</div>
 		</div>
     </div>
     <div id="moduleCalendar" class="wSmall hSmall">
