Убрал изменение размера текста

--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
 			</div>
  		</div>
 		<div class="moduleMPlayerList">
-				<div data-font-adjust-height="40%">01: If These Are The Good Times</div>	
-				<div  data-font-adjust-height="40%">02: Think</div>
-				<div class="thistrack"data-font-adjust-height="40%">03: No Fronts</div>
-				<div data-font-adjust-height="40%">04: Pull My Finger</div>
-				<div data-font-adjust-height="40%">05: Who's The King?</div>
-				<div data-font-adjust-height="40%">06: Strip Song</div>
-				<div data-font-adjust-height="40%">07: Queen</div>
-				<div data-font-adjust-height="40%">08: In The Doghouse</div>
-				<div data-font-adjust-height="40%">09: Funnel King</div>
-				<div data-font-adjust-height="40%">10: What Comes Around</div>
+				<div>01: If These Are The Good Times</div>	
+				<div>02: Think</div>
+				<div class="thistrack">03: No Fronts</div>
+				<div>04: Pull My Finger</div>
+				<div>05: Who's The King?</div>
+				<div>06: Strip Song</div>
+				<div>07: Queen</div>
+				<div>08: In The Doghouse</div>
+				<div>09: Funnel King</div>
+				<div>10: What Comes Around</div>
 		</div>
     </div>
     <div id="moduleCalendar" class="wSmall hSmall">
