--- a/index.html
+++ b/index.html
@@ -107,7 +107,19 @@
 		</div>
     </div>
     <div id="moduleCalendar" class="wSmall hSmall">
-        <div class="tmpMod">Календарь</div>
+		<div class="calendarHead">
+			<div class="calendarCurrentDayID">Wednesday </div>
+			<div class="calendarCurrentDayDate">May 21, 2014</div>
+		</div>     
+		<div class="calendarDay">
+			<div>Sun</div>
+            <div>Mon</div>
+            <div>Tue</div>
+            <div>WEd</div>
+            <div>Thu</div>
+            <div>Fri</div>
+			<div>Sat</div>
+		</div>   
     </div>
     <div id="moduleNews" class="wSmall hSmall">
         <div class="tmpMod">Новости</div>
