немного отредактирован код
добавлен <div class="calendarMain"> - вместо удаленного по ошибке <div
class="tmpMod">Календарь</div>

--- a/index.html
+++ b/index.html
@@ -107,20 +107,22 @@
 		</div>
     </div>
     <div id="moduleCalendar" class="wSmall hSmall">
-		<div class="calendarHead">
-			<div class="calendarCurrentDayID">Wednesday </div>
-			<div class="calendarCurrentDayDate">May 21, 2014</div>
-		</div>     
-		<div class="calendarDay">
-			<div>Sun</div>
-            <div>Mon</div>
-            <div>Tue</div>
-            <div>WEd</div>
-            <div>Thu</div>
-            <div>Fri</div>
-			<div>Sat</div>
-		</div>   
-    </div>
+		<div class="calendarMain">
+			<div class="calendarHead">
+					<div class="calendarCurrentDayID">Wednesday </div>
+					<div class="calendarCurrentDayDate">May 21, 2014</div>
+				</div>     
+			<div class="calendarDay">
+				<div>Sun</div>
+				<div>Mon</div>
+				<div>Tue</div>
+				<div>WEd</div>
+				<div>Thu</div>
+				<div>Fri</div>
+				<div>Sat</div>
+			</div>   
+			</div>
+	</div>
     <div id="moduleNews" class="wSmall hSmall">
         <div class="tmpMod">Новости</div>
     </div>
