--- a/index.html
+++ b/index.html
@@ -82,19 +82,19 @@
 	         	</div>
 	    </div>
     </div>
-    <div id="moduleMusicPlayer" class="wSmall hMedium">
-        <div class="moduleMPlayerHeadButtom"></div>
-				<div class="moduleMPlayerHeadButtomSmallIcon">
+    <div id="mPlayer" class="wSmall hMedium">
+        <div class="mPlayerHeadButton"></div>
+				<div class="mPlayerHeadButtonSmallIcon">
 					<img src="assets/images/MPlayerPlayIcon.png"/>
 				</div>
-		<div class="moduleMPlayerHead">
-			<div class="moduleMPlayerHeadSongName">Dog Eat Dog - No Fronts</div>
-			<div class="moduleMPlayerHeadSongAuthor">All Boro Kings</div>
-			<div class="moduleMPlayerHeadIndicatorLine">
+		<div class="mPlayerHead">
+			<div class="mPlayerHeadSongName">Dog Eat Dog - No Fronts</div>
+			<div class="mPlayerHeadSongAuthor">All Boro Kings</div>
+			<div class="mPlayerHeadIndicatorLine">
 				<div class="Indicator"></div>
 			</div>
  		</div>
-		<div class="moduleMPlayerList">
+		<div class="mPlayerList">
 				<div>01: If These Are The Good Times</div>	
 				<div>02: Think</div>
 				<div class="thistrack">03: No Fronts</div>
