поправил в соответствии с коментами

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<div class="calendarCurrentDayID">Wednesday </div>
 					<div class="calendarCurrentDayDate">May 21, 2014</div>
 				</div>     
-			<div class="calendarDay">
+			<div class="calendarDays">
 				<div>Sun</div>
 				<div>Mon</div>
 				<div>Tue</div>
