--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
              </div>
         </div>
     </div>
-    <div id="mPlayer" class="wSmall hMedium">
+    <div id="moduleMusicPlayer" class="wSmall hMedium">
         <div class="mPlayerHeadButton"></div>
             <div class="mPlayerHeadButtonSmallIcon">
                 <img src="assets/images/MPlayerPlayIcon.png"/>
