Добавил модуль новости

--- a/index.html
+++ b/index.html
@@ -126,7 +126,27 @@
         </div>
     </div>
     <div id="moduleNews" class="wSmall hSmall">
-        <div class="tmpMod">Новости</div>
+        <div class="moduleNewsTab">
+            <div class="moduleNewsCurrentTab">Lorem Ipsun</div>
+            <div class="moduleNewsTab">Dolor Sit</div>
+	    </div>
+        <div class="moduleNewsList">
+            <div class="moduleNewsListANew">
+                <div class="Image"><img src="assets/images/moduleNewsImage1.png"></div>
+                <div class="Text">Donec eget eleifend ante. <br>Suspendisse euismod ipsum quis arcu saggitis elementum. Nam a mi erat. Duis et dolor libero.</div>
+                <div class="ReadMoreLink">ReadMore</div>
+            </div>	
+            <div class="moduleNewsListANew">
+                <div class="Image"><img src="assets/images/moduleNewsImage2.png"></div>
+                <div class="Text">Phasellus blandit eros sit amet nibh vulputate, ut ornare est pretium. Donec metus sem, semper a lacinia a, rhoncus blandit magna.</div>
+                <div class="ReadMoreLink">ReadMore</div>
+            </div>
+            <div class="moduleNewsListANew">
+                <div class="Image"><img src="assets/images/moduleNewsImage1.png"></div>
+                <div class="Text">Donec eget eleifend ante. <br>Suspendisse euismod ipsum quis arcu saggitis elementum. Nam a mi erat. Duis et dolor libero.</div>
+                <div class="ReadMoreLink">ReadMore</div>
+            </div>
+        </div>
     </div>
     <div id="moduleVideoPlayer" class="wSmall hSmall">
         <div class="tmpMod">Видео Плеер</div>
