Кнопку Play можно было сдлать проще!

--- a/index.html
+++ b/index.html
@@ -82,11 +82,8 @@
         </div>
     </div>
     <div id="moduleMusicPlayer" class="wSmall hMedium">
-        <div class="mPlayerHeadButton"></div>
-            <div class="mPlayerHeadButtonSmallIcon">
-                <img src="assets/images/MPlayerPlayIcon.png"/>
-            </div>
         <div class="mPlayerHead">
+            <div class="mPlayerPlayButton mPlayerPlay"></div>
             <div class="mPlayerHeadSongName">Dog Eat Dog - No Fronts</div>
             <div class="mPlayerHeadSongAuthor">All Boro Kings</div>
             <div class="mPlayerHeadIndicatorLine">
