Оживил плеер, мелкие правки в его стилях.

--- a/index.html
+++ b/index.html
@@ -83,13 +83,14 @@
     </div>
     <div id="moduleMusicPlayer" class="wSmall hMedium">
         <div class="mPlayerHead">
-            <div class="mPlayerPlayButton mPlayerPlay"></div>
-            <div class="mPlayerHeadSongName">Dog Eat Dog - No Fronts</div>
-            <div class="mPlayerHeadSongAuthor">All Boro Kings</div>
+            <div class="mPlayerPlayButton mPlayerPause"></div>
+            <div class="mPlayerHeadSongName"></div>
+            <div class="mPlayerHeadSongAuthor"></div>
             <div class="mPlayerHeadIndicatorLine">
                 <div class="Indicator"></div>
             </div>
-         </div>
+            <audio></audio>
+        </div>
         <div class="mPlayerList">
             <div>01: If These Are The Good Times</div>
             <div>02: Think</div>
