Добавила описание пользователя, поле с количеством фото, лайков и сообщений

--- a/index.html
+++ b/index.html
@@ -68,17 +68,37 @@
         </div>
     </div>
     <div id="moduleLogin" class="wSmall hMedium">
-        <div class="tmpMod">Логин</div>
-    </div>
+        <div class="tmpMod">
+        Логин
+        </div>
+        </div>
     <div id="moduleUser" class="wSmall hMedium">
-        <div class="UserPicture"> 
+        <div class="userPicture"> 
             <img src="assets/images/UserBackground.png"/>
-            <div class="Avatar">
+            <div class="userAvatar">
                 <img src="assets/images/profileAvatar.png"/>
             </div>
-             <div class="UserName">
-                 <div class="Name">Shawn Mitchell</div>
-             </div>
+            <div class="userName">
+                <div class="profileName">Shawn Mitchell</div>
+                <div class="profession">photographer</div>
+            </div>
+            <div class="userInfo">
+                <div>Donec eget eleifend ante. Suspendisse euismod ipsum quis arcu sagittis elementum. Nam a mi erat. Duis et dolor libero.
+               <a href="#">Read more.</a>
+                </div>
+            </div>
+            <div class="userMenuIcons">
+                <div class="photoIcon"><img src="assets/images/photoIcon.png"/>
+                    <div class="numbers">1850</div>
+                </div>
+                <div class="likesIcon"><img src="assets/images/likesIcon.png"/>
+                    <div class="numbers">27.1987</div>
+                </div>
+                <div class="messageIcon"><img src="assets/images/messageIcon.png"/>
+                    <div class="numbers">567</div>
+                </div>
+                
+            </div>
         </div>
     </div>
     <div id="moduleMusicPlayer" class="wSmall hMedium">
@@ -127,13 +147,13 @@
         <div class="moduleNewsTab">
             <div class="moduleNewsCurrentTab">Lorem Ipsun</div>
             <div class="moduleNewsTab">Dolor Sit</div>
-	    </div>
+        </div>
         <div class="moduleNewsList">
             <div class="moduleNewsListANew">
                 <div class="Image"><img src="assets/images/moduleNewsImage1.png"></div>
                 <div class="Text">Donec eget eleifend ante. <br>Suspendisse euismod ipsum quis arcu saggitis elementum. Nam a mi erat. Duis et dolor libero.</div>
                 <div class="ReadMoreLink">ReadMore</div>
-            </div>	
+            </div>1312
             <div class="moduleNewsListANew">
                 <div class="Image"><img src="assets/images/moduleNewsImage2.png"></div>
                 <div class="Text">Phasellus blandit eros sit amet nibh vulputate, ut ornare est pretium. Donec metus sem, semper a lacinia a, rhoncus blandit magna.</div>
